# symphony

./: .pre-commit-config.yaml  AGENTS.md  README.md  WORKFLOW.md
docs/: claude-runner-routines-channels-plan.md  python-claude-symphony-plan.md  stacked-pr-workflow.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-python-for-symphony-implementation.md  0003-use-uv-for-python-tooling.md  0004-use-beads-for-local-tracker-backend.md  0005-start-with-claude-headless-runner.md  0006-use-basedpyright-for-type-checking.md  0007-use-pydantic-v2-for-config-and-boundary-models.md  0008-use-environment-allowlist-for-headless-runs.md
docs/claude-spikes/: 2026-05-28-headless-structured-handoff.md  2026-05-28-headless-workspace-edit.md  README.md
python/: .gitignore  README.md  pyproject.toml
python/src/symphony/: __init__.py  clean.py  cli.py  config.py  hooks.py  log_events.py  models.py  orchestrator.py  prompt.py  run_ledger.py  runtime.py  runtime_paths.py  workflow.py  workspace.py
python/src/symphony/runner/: base.py  claude_headless.py  fake.py
python/src/symphony/tracker/: __init__.py  base.py  beads.py  github.py  jira.py
python/tests/: test_beads_tracker.py  test_claude_headless_live_spike.py  test_claude_headless_runner.py  test_clean.py  test_cli.py  test_fake_runner.py  test_github_tracker.py  test_hooks.py  test_jira_tracker.py  test_log_events.py  test_orchestrator.py  test_prompt.py  test_run_ledger.py  test_runtime.py  test_workflow_config.py  test_workspace.py
