[project]
name = "symphony-python"
version = "0.1.0"
description = "Python implementation of Symphony"
readme = "README.md"
authors = [
    { name = "Brian Takashi Hooper", email = "b.takashi@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.25.1",
]

[project.scripts]
symphony = "symphony.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "poethepoet>=0.46.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/symphony"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast deterministic tests with no external services",
    "integration: local integration tests that may use subprocesses or temporary Beads databases",
    "live: tests that call external services or real Claude",
    "spike: exploratory validation tests that are not part of the default gate",
]

[tool.coverage.run]
source = ["symphony"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.poe.tasks]
format-check = "ruff format --check ."
lint = "ruff check ."
typecheck = "basedpyright"
test = "pytest -m 'not integration and not live and not spike' --cov=symphony --cov-report=term-missing"
check = ["format-check", "lint", "typecheck", "test"]
clean = { script = "symphony.clean:main" }
